// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components DropArea should match exact snapshot 1`] = `
<div>
  <div
    className="brainhub-drop-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDrop={[Function]}
  >
    <div
      className="brainhub-drop-area__button"
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      + Add File
    </div>
  </div>
</div>
`;

exports[`components DropArea should match exact snapshot when dragging 1`] = `
<div>
  <div
    className="brainhub-drop-area  brainhub-drop-area--dragging"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDrop={[Function]}
  >
    <div
      className="brainhub-drop-area__info"
    >
      Drop here to select file.
    </div>
  </div>
</div>
`;
